# Drones_Service

./: .gitignore  db.py  main.py  pyproject.toml
managers/: auth.py  user.py
models/: __init__.py  drone.py  enums.py  user.py  users.py
pgdata/: postmaster.pid
pgdata/base/1/: 1247  1247_fsm  1249  1249_fsm  1255  1259  1259_fsm  13375  13380  13385  2606  2608  2609  2610  2615  2618  2618_fsm  2658  2659  2662  2663  2673  2674  2675  2678  2679  2690  2691  2692  2693  2703  2704  2836  2838  2838_fsm  2839  3394  3455  3456  3600  (+3 more)
pgdata/global/: 1260  1262  pg_control
resources/: routes.py
schemas/request/: user.py
