[tool.poetry]
name = "drones-service"
version = "0.1.0"
description = ""
authors = ["PawWitGit <git.pawelwitala@gmail.com>"]
readme = "README.md"
packages = [{include = "drones_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
