[tool.poetry]
name = "drones-service"
version = "0.1.0"
description = ""
authors = ["PawWitGit <git.pawelwitala@gmail.com>"]
readme = "README.md"
packages = [{include = "drones_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
alembic = "^1.9.2"
sqlalchemy = "^1.4.46"
psycopg2 = "^2.9.5"
psycopg-binary = "^3.1.8"
databases = "^0.7.0"
asyncpg = "^0.27.0"
decouple = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
